<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.feedback</groupId>
    <artifactId>feedback-system-postech</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <!-- Azure -->
        <resourceGroup>functions-quarkus</resourceGroup>
        <functionAppName>function-quarkus-postech</functionAppName>
        <functionSubscriptionId>be0336b0-3f01-49e7-8df2-57bcacac231f</functionSubscriptionId>
        <azure.functions.maven.plugin.version>1.22.0</azure.functions.maven.plugin.version>

        <compiler-plugin.version>3.14.1</compiler-plugin.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.31.1</quarkus.platform.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>

        <!-- Build -->
        <stagingDirectory>
            ${project.build.directory}/azure-functions/${functionAppName}
        </stagingDirectory>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Quarkus Azure Functions HTTP -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-azure-functions-http</artifactId>
        </dependency>

        <!-- Quarkus Funqy -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-funqy-http</artifactId>
        </dependency>

        <!-- Azure Functions -->
        <dependency>
            <groupId>com.microsoft.azure.functions</groupId>
            <artifactId>azure-functions-java-library</artifactId>
            <version>3.1.0</version>
        </dependency>

        <!-- JSON -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <!-- Banco de Dados -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-hibernate-orm-panache</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-jdbc-postgresql</artifactId>
        </dependency>

        <!-- E-mail -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-mailer</artifactId>
        </dependency>

        <!-- Scheduler para relatórios agendados -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-scheduler</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                            <goal>native-image-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>

            <!-- Azure Functions Maven Plugin (somente para deploy) -->
            <plugin>
                <groupId>com.microsoft.azure</groupId>
                <artifactId>azure-functions-maven-plugin</artifactId>
                <version>${azure.functions.maven.plugin.version}</version>
                <configuration>
                    <auth>
                        <type>azure_cli</type>
                    </auth>

                    <appName>${functionAppName}</appName>
                    <resourceGroup>${resourceGroup}</resourceGroup>
                    <subscriptionId>${functionSubscriptionId}</subscriptionId>
                    <region>canadacentral</region>

                    <runtime>
                        <os>windows</os>
                        <javaVersion>21</javaVersion>
                    </runtime>

                    <appSettings>
                        <!-- Banco de Dados -->
                        <property>
                            <name>QUARKUS_DATASOURCE_DB_KIND</name>
                            <value>postgresql</value>
                        </property>
                        <property>
                            <name>QUARKUS_DATASOURCE_USERNAME</name>
                            <value>postech</value>
                        </property>
                        <property>
                            <name>QUARKUS_DATASOURCE_PASSWORD</name>
                            <value>Fiap@2026</value>
                        </property>
                        <property>
                            <name>QUARKUS_DATASOURCE_JDBC_URL</name>
                            <value>jdbc:postgresql://postgres-tech-db.postgres.database.azure.com:5432/postgres</value>
                        </property>
                        <!-- Hibernate -->
                        <property>
                            <name>QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION</name>
                            <value>update</value>
                        </property>
                        <!-- E-mail -->
                        <property>
                            <name>QUARKUS_MAILER_MOCK</name>
                            <value>false</value>
                        </property>
                        <property>
                            <name>ADMIN_EMAIL</name>
                            <value>admin@example.com</value>
                        </property>
                    </appSettings>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    <systemPropertyVariables>
                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
            </properties>
        </profile>
    </profiles>
</project>
